--- a/inst/rmarkdown/templates/multi_document/resources/educ.bib
+++ b/inst/rmarkdown/templates/multi_document/resources/educ.bib
@@ -1,12 +1,13 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for AdamVI at 2013-08-29 10:55:02 -0500 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
+@Manual{SGPreports,
+    title = {SGPreports: Reports rendered in multiple formats using a single function and R Markdown file.},
+    author = {Adam R. {Van Iwaarden} and Damian W. Betebenner},
+    year = {2015},
+    note = {R package version 1.0},
+    url = {http://github.com/CenterForAssessment/SGPreports},
+ }
 
 @Manual{sgp2014,
     title = {{SGP}: An R Package for the Calculation and Visualization of Student Growth Percentiles \& Percentile Growth Trajectories.},
@@ -20,7 +21,7 @@
     title = {{SGP}: An R Package for the Calculation and Visualization of Student Growth Percentiles \& Percentile Growth Trajectories.},
     author = {Damian W. Betebenner and Adam {VanIwaarden} and Ben Domingue and Yi Shang},
     year = {2015},
-    note = {R package version 1.3-6.2},
+    note = {R package version 1.3-6.9},
     url = {https://github.com/CenterForAssessment/SGP},
   }
 
@@ -30,7 +31,7 @@
 	Organization = {R Foundation for Statistical Computing},
 	Title = {{\textup{\textsf{R}}}: A language and environment for statistical computing},
 	Url = {http://www.R-project.org},
-	Year = {2014},
+	Year = {2015},
 	Bdsk-Url-1 = {http://www.R-project.org}}
 
 @article {ShangVanIBet:2015,
