--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter{Mathematical Formulation}
 \label{mathchapter}
-
+\Here is a change
 The objective of this fake thesis document is to demonstrate
 a multitude of \LaTeX{} features as well as features specific
 to the thesis class.
